# todo-app

./: .gitignore
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/TodoForm/: TodoForm.tsx
server/: Makefile  gunicorn.conf.py  pyproject.toml
server/src/todo/api/: app.py
